# gazprom-test-task

./: .env  CHANGELOG.md  Dockerfile  README.md  alembic.ini  hypercorn.conf.py  pyproject.toml  settings.toml
.github/workflows/: ci.yml
src/: app.py  config_log.py  settings.py
src/database/: database.py  models.py
src/database/alembic/: env.py
src/database/alembic/versions/: 2025_04_11_0227-7f57c694ed93_initial_migration.py  2025_04_11_0449-43a05c5917d6_make_serial_number_unique.py
src/routes/devices/: abstract_data_storage.py  dao.py  exceptions.py  schemas.py  views.py
src/routes/healthchecks/: schema.py  views.py
src/routes/users/: abstract_data_storage.py  dao.py  exceptions.py  schemas.py  views.py
