[project]
name = "gazprom-test-task"
version = "0.2.0"
description = "Gazprom internship test task"
authors = [
    {name = "KonstantinPetrovichQWERTY",email = "skatkov24@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "pytz (>=2025.2,<2026.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"

[tool.mypy]
exclude = [
    "src/database/alembic/"
]
